--- a/pages/.htaccess
+++ b/pages/.htaccess
@@ -3,6 +3,11 @@ RewriteEngine On
 RewriteCond %{SCRIPT_FILENAME} -f
 RewriteCond %{SCRIPT_FILENAME} (.*?).html?$
 RewriteCond %{SCRIPT_FILENAME} !index.php
+RewriteRule ^quest\/(.*?)$ /pages/quest.php?page=quest/$1 [QSA,NC,L]
+
+RewriteCond %{SCRIPT_FILENAME} -f
+RewriteCond %{SCRIPT_FILENAME} (.*?).html?$
+RewriteCond %{SCRIPT_FILENAME} !index.php
 RewriteRule ^sonicwall\/(.*?)$ /pages/sonicwall.php?page=sonicwall/$1 [QSA,NC,L]
 
 RewriteCond %{SCRIPT_FILENAME} -f
