Removing compiled js files.
Change-Id: I47fdc62478036745ff85e089e48c2a4c20b9a0d8

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@ gen
 
 /shop/**/*.css
 /shop/**/*.map
+
+/static/library/jQuery/*.min.js
+!/static/library/jQuery/jquery-1.9.1.min.js
+!/static/library/jQuery/jquery-1.11.3.min.js
+!/static/library/jQuery/jquery.fancybox.min.js
